tools/tests/errors/surf_name_07.experr
name 'startvalue' is not defined
